--- a/finalProjectGit.html
+++ b/finalProjectGit.html
@@ -201,7 +201,12 @@ changeButton.addEventListener("click", answerAge);
 <hr />
 <span>
   <center>
- 
+<em>Lorem ipsum bespoke normcore migas banjo, tousled nostrud ut schlitz food truck sunt. <br>
+    Art party wayfarers taxidermy bespoke kitsch
+mollit.
+<br>
+Post-ironic tofu single-origin coffee, kitsch chia slow-carb pariatur heirloom artisan tilde. <br>
+Blog kickstarter labore, voluptate listicle bespoke mixtape normcore tote bag adipisicing cillum est woke.</em>
   </center>
   </span>
 </body>
